samples/_failures_safe/1761095801_c22946_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6342cba7.c: In function ‘main’:
./samples/SAFE/__tmp_6342cba7.c:160:22: error: ‘compressed_b’ undeclared (first use in this function); did you mean ‘compressed_buf’?
  160 |         buffer_free(&compressed_b
      |                      ^~~~~~~~~~~~
      |                      compressed_buf
./samples/SAFE/__tmp_6342cba7.c:160:22: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6342cba7.c:160:34: error: expected ‘)’ at end of input
  160 |         buffer_free(&compressed_b
      |                    ~             ^
      |                                  )
./samples/SAFE/__tmp_6342cba7.c:160:9: error: expected declaration or statement at end of input
  160 |         buffer_free(&compressed_b
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_6342cba7.c:160:9: error: expected declaration or statement at end of input
